fix home hero copy alignment

--- a/src/scss/_components.home.scss
+++ b/src/scss/_components.home.scss
@@ -14,6 +14,10 @@
         }
     }
 
+    .c-hero__copy {
+        text-align: left;
+    }
+
     &__current {
         background-color: $black;
 
